backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: annual-sports-backend
  namespace: annual-sports
spec:
  replicas: 1
  selector:
    matchLabels:
      app: annual-sports-backend
  template:
    metadata:
      labels:
        app: annual-sports-backend
    spec:
      containers:
        - name: backend
          image: pkprincekumar7/annual-sports-backend:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: annual-sports-backend
  namespace: annual-sports
spec:
  selector:
    app: annual-sports-backend
  ports:
    - port: 3001
      targetPort: 3001
