mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: annual-sports
spec:
  ports:
    - port: 27017
      name: mongo
  clusterIP: None
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: annual-sports
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        # Set this if your cluster does not have a default StorageClass
        # storageClassName: standard
        resources:
          requests:
            storage: 5Gi
